--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
 
   <!-- side nav -->
   <ul id="side-menu" class="sidenav side-menu">
-    <li><a class="subheader">FOODNINJA</a></li>
+    <li><a class="subheader">PWA</a></li>
     <li><a href="/" class="waves-effect">Home</a></li>
     <li><a href="/pages/about.html" class="waves-effect">About</a></li>
     <li><div class="divider"></div></li>
@@ -62,18 +62,18 @@
   <!-- add recipe side nav -->
   <div id="side-form" class="sidenav side-form">
     <form class="add-recipe container section">
-      <h6 >New Recipe</h6>
+      <h6 >New Notification</h6>
       <div class="divider"></div>
       <div class="input-field">
-        <input placeholder="e.g. Ninja soup" id="title" type="text" class="validate">
-        <label for="title">Recipe Title</label>
+        <input placeholder="e.g. New Feature alert" id="title" type="text" class="validate">
+        <label for="title">Notification Title</label>
       </div>
       <div class="input-field">
-        <input placeholder="e.g. Tofu, mushroom, garlic" id="ingredients" type="text" class="validate">
-        <label for="ingredients">Ingredients</label>
+        <input placeholder="e.g. We have introduced new feature" id="ingredients" type="text" class="validate">
+        <label for="ingredients">Notification Details</label>
       </div>
       <div class="input-field center">
-        <button class="btn-small">Add</button>
+        <button class="btn-small">Send</button>
       </div>
     </form>
   </div>
